Remove `--enable-preview` flag from compiler and Surefire plugin configuration in `pom.xml`